пункт 1 - popup-редактировать профиль

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./pages/index.css">
     <meta name="author" content="Даниела Двоеглазова" />
 </head>
+
 <body class="page">
     <div class="content">
         <header class="header">
@@ -16,7 +18,7 @@
 
         <main class="main">
             <section class="profile">
-                    <img class="profile__avatar-image" src="./images/avatar.PNG" alt="аватар">
+                <img class="profile__avatar-image" src="./images/avatar.PNG" alt="аватар">
                 <div class="profile__info">
                     <h1 class="profile__name">Frequent flyer traveller</h1>
                     <button class="profile__edit-button" type="button"></button>
@@ -27,48 +29,49 @@
 
             <section class="elements-container">
                 <ul class="elements">
-                <li class="card">
-                    <img class="card__image" src="./images/for_cards/irkutsk.jpeg" alt="Иркутск">
-                    <div class="card__info">
-                        <h2 class="card__title">Иркутск</h2>
-                        <button class="card__like-button" type="button"></button>
-                    </div>
-                </li>
-                <li class="card">
-                    <img class="card__image" src="./images/for_cards/khabarovsk.jpeg" alt="Хабаровск">
-                    <div class="card__info">
-                        <h2 class="card__title">Хабаровск</h2>
-                        <button class="card__like-button" type="button"></button>
-                    </div>
-                </li>
-                <li class="card">
-                    <img class="card__image" src="./images/for_cards/krasnoyarsk.jpeg" alt="Красноярск">
-                    <div class="card__info">
-                        <h2 class="card__title">Красноярск</h2>
-                        <button class="card__like-button" type="button"></button>
-                    </div>
-                </li>
-                <li class="card">
-                    <img class="card__image" src="./images/for_cards/petropavlovsk-kamchatsky.jpeg" alt="Петропавловск-Камчатский">
-                    <div class="card__info">
-                        <h2 class="card__title">Петропавловск-Камчатский</h2>
-                        <button class="card__like-button" type="button"></button>
-                    </div>
-                </li>
-                <li class="card">
-                    <img class="card__image" src="./images/for_cards/vladivostok.jpeg" alt="Владивосток">
-                    <div class="card__info">
-                        <h2 class="card__title">Владивосток</h2>
-                        <button class="card__like-button" type="button"></button>
-                    </div>
-                </li>
-                <li class="card">
-                    <img class="card__image" src="./images/for_cards/yuzhno-sakhalinsk.jpeg" alt="Южно-Сахалинск">
-                    <div class="card__info">
-                        <h2 class="card__title">Южно-Сахалинск</h2>
-                        <button class="card__like-button" type="button"></button>
-                    </div>
-                </li>
+                    <li class="card">
+                        <img class="card__image" src="./images/for_cards/irkutsk.jpeg" alt="Иркутск">
+                        <div class="card__info">
+                            <h2 class="card__title">Иркутск</h2>
+                            <button class="card__like-button" type="button"></button>
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img class="card__image" src="./images/for_cards/khabarovsk.jpeg" alt="Хабаровск">
+                        <div class="card__info">
+                            <h2 class="card__title">Хабаровск</h2>
+                            <button class="card__like-button" type="button"></button>
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img class="card__image" src="./images/for_cards/krasnoyarsk.jpeg" alt="Красноярск">
+                        <div class="card__info">
+                            <h2 class="card__title">Красноярск</h2>
+                            <button class="card__like-button" type="button"></button>
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img class="card__image" src="./images/for_cards/petropavlovsk-kamchatsky.jpeg"
+                            alt="Петропавловск-Камчатский">
+                        <div class="card__info">
+                            <h2 class="card__title">Петропавловск-Камчатский</h2>
+                            <button class="card__like-button" type="button"></button>
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img class="card__image" src="./images/for_cards/vladivostok.jpeg" alt="Владивосток">
+                        <div class="card__info">
+                            <h2 class="card__title">Владивосток</h2>
+                            <button class="card__like-button" type="button"></button>
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img class="card__image" src="./images/for_cards/yuzhno-sakhalinsk.jpeg" alt="Южно-Сахалинск">
+                        <div class="card__info">
+                            <h2 class="card__title">Южно-Сахалинск</h2>
+                            <button class="card__like-button" type="button"></button>
+                        </div>
+                    </li>
                 </ul>
             </section>
         </main>
@@ -81,8 +84,10 @@
             <div class="popup__container">
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form class="popup__form" name="popup__edit-form">
-                    <input class="popup__input popup__input_value_profile-name" name="profile-name" value="Frequent flyer traveller" id="popup__profile-name" placeholder="Имя" type="text">
-                    <input class="popup__input popup__input_value_description" name="profile-description" value="Куда летим в этот раз?" id="popup__description" placeholder="О себе" type="text">
+                    <input class="popup__input popup__input_value_profile-name" name="profile-name"
+                        value="Frequent flyer traveller" id="popup__profile-name" placeholder="Имя" type="text">
+                    <input class="popup__input popup__input_value_description" name="profile-description"
+                        value="Куда летим в этот раз?" id="popup__description" placeholder="О себе" type="text">
                     <button class="popup__save-button" type="submit">Сохранить</button>
                 </form>
                 <button class="popup__close-button" type="button"></button>
@@ -90,5 +95,7 @@
         </section>
 
     </div>
+    <script src="./script.js"></script>
 </body>
+
 </html>
