--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         </header>
 
         <main class="main">
+
+            <!--секция - информация профиля-->
             <section class="profile">
                 <img class="profile__avatar-image" src="./images/avatar.PNG" alt="аватар">
                 <div class="profile__info">
@@ -27,60 +29,18 @@
                 <button class="profile__add-button" type="button"></button>
             </section>
 
-            <section class="elements-container">
-                <ul class="elements">
-                    <li class="card">
-                        <img class="card__image" src="./images/for_cards/irkutsk.jpeg" alt="Иркутск">
-                        <div class="card__info">
-                            <h2 class="card__title">Иркутск</h2>
-                            <button class="card__like-button" type="button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img class="card__image" src="./images/for_cards/khabarovsk.jpeg" alt="Хабаровск">
-                        <div class="card__info">
-                            <h2 class="card__title">Хабаровск</h2>
-                            <button class="card__like-button" type="button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img class="card__image" src="./images/for_cards/krasnoyarsk.jpeg" alt="Красноярск">
-                        <div class="card__info">
-                            <h2 class="card__title">Красноярск</h2>
-                            <button class="card__like-button" type="button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img class="card__image" src="./images/for_cards/petropavlovsk-kamchatsky.jpeg"
-                            alt="Петропавловск-Камчатский">
-                        <div class="card__info">
-                            <h2 class="card__title">Петропавловск-Камчатский</h2>
-                            <button class="card__like-button" type="button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img class="card__image" src="./images/for_cards/vladivostok.jpeg" alt="Владивосток">
-                        <div class="card__info">
-                            <h2 class="card__title">Владивосток</h2>
-                            <button class="card__like-button" type="button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img class="card__image" src="./images/for_cards/yuzhno-sakhalinsk.jpeg" alt="Южно-Сахалинск">
-                        <div class="card__info">
-                            <h2 class="card__title">Южно-Сахалинск</h2>
-                            <button class="card__like-button" type="button"></button>
-                        </div>
-                    </li>
-                </ul>
-            </section>
+            <!--секция - контейнер с карточками-->
+            <section class="elements-container"></section>
+
         </main>
 
         <footer class="footer">
             <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
         </footer>
 
-        <section class="popup">
+
+        <!--модальное окно - редактировать профиль-->
+        <section class="popup popup_type_editProfile">
             <div class="popup__container">
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form class="popup__form" name="popup__edit-form">
@@ -90,12 +50,51 @@
                         value="Куда летим в этот раз?" id="popup__description" placeholder="О себе" type="text">
                     <button class="popup__save-button" type="submit">Сохранить</button>
                 </form>
-                <button class="popup__close-button" type="button"></button>
+                <button class="popup__close-button" id="editProfile-close-button" type="button"></button>
             </div>
         </section>
+
+        <!--модальное окно - добавить карточку-->
+        <section class="popup popup_type_addCard">
+            <div class="popup__container">
+                <h2 class="popup__title">Новое место</h2>
+                <form class="popup__form" id="cardFormPopup" name="popup__edit-form">
+                    <input class="popup__input popup__input_value_card-name" name="card-name"
+                        value="" id="popup__card-name" placeholder="Название" type="text">
+                    <input class="popup__input popup__input_value_card-url" name="card-url"
+                        value="" id="popup__card-url" placeholder="Ссылка на картинку" type="url">
+                    <button class="popup__save-button"  type="submit">Создать</button>
+                </form>
+                <button class="popup__close-button" id="addCard-close-button" type="button"></button>
+            </div>
+        </section>
+
+        <!--модальное окно - увеличить изображение карточки-->
+        <section class="popup popup_type_image-preview">
+            <div class="popup__image-container">
+                <button class="popup__close-button" id="imagePreview-close-button" type="button"></button>
+                    <img class="popup__image" src="" alt="">
+                    <h2 class="popup__image-name"></h2>
+            </div>
+        </section>
+
+
+        <!--шаблон карточки-->
+        <template id="cardTemplate">
+                <li class="card">
+                    <img class="card__image" src="" alt="Изображение">
+                    <div class="card__info">
+                        <h2 class="card__title"></h2>
+                        <button class="card__like-button" type="button"></button>
+                    </div>
+                    <button class="card__delete-button"></button>
+                </li>
+        </template>
 
     </div>
     <script src="./script.js"></script>
 </body>
+
+
 
 </html>
