--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form class="popup__form" name="popup__edit-form">
                     <input class="popup__input popup__input_value_profile-name" name="profile-name"
-                        value="Frequent flyer traveller" id="popup__profile-name" placeholder="Имя" type="text">
+                        value="" id="popup__profile-name" placeholder="Имя" type="text">
                     <input class="popup__input popup__input_value_description" name="profile-description"
-                        value="Куда летим в этот раз?" id="popup__description" placeholder="О себе" type="text">
+                        value="" id="popup__description" placeholder="О себе" type="text">
                     <button class="popup__save-button" type="submit">Сохранить</button>
                 </form>
                 <button class="popup__close-button" id="editProfile-close-button" type="button"></button>
@@ -92,9 +92,8 @@
         </template>
 
     </div>
+    <script src="./cards.js"></script>
     <script src="./script.js"></script>
 </body>
-
-
 
 </html>
