--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Проект Место</title>
-    <link rel="stylesheet" href="./pages/index.css">
+    <!-- <link rel="stylesheet" href="./pages/index.css"> -->
     <meta name="author" content="Даниела Двоеглазова" />
 </head>
 
@@ -20,7 +20,7 @@
 
             <!--секция - информация профиля-->
             <section class="profile">
-                <img class="profile__avatar-image" src="./images/avatar.PNG" alt="аватар">
+                <img class="profile__avatar-image" src="./images/avatar.png" alt="аватар">
                 <div class="profile__info">
                     <h1 class="profile__name">Frequent flyer traveller</h1>
                     <button class="profile__edit-button" type="button"></button>
@@ -103,13 +103,13 @@
         </template>
 
     </div>
-    
-    <script type="module" src="./components/cards.js"></script>
+    <!-- <script type="module" src="./index.js"></script> -->
+
+    <!-- <script type="module" src="./components/cards.js"></script>
     <script type="module" src="./components/card.js"></script>
     <script type="module" src="./components/modal.js"></script>
     <script type="module" src="./components/utils.js"></script>
-    <script type="module" src="./components/validate.js"></script>
-    <script type="module" src="./components/index.js"></script>
+    <script type="module" src="./components/validate.js"></script> -->
     
 </body>
 
