--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,10 @@
 
             <!--секция - информация профиля-->
             <section class="profile">
-                <img class="profile__avatar-image" src="<%=require('./images/avatar.png')%>" alt="аватар">
+                <div class="profile__avatar-container">
+                    <img class="profile__avatar-image" src="<%=require('./images/avatar.png')%>" alt="аватар">
+                    <button class="profile__edit-avatar-button" type="button"></button>
+                </div>
                 <div class="profile__info">
                     <h1 class="profile__name">Frequent flyer traveller</h1>
                     <button class="profile__edit-button" type="button"></button>
@@ -54,7 +57,7 @@
                         value="" id="description-input" placeholder="О себе" type="text" pattern="^[A-Za-zА-Яа-яЁё\s?-]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса, вопроса и пробелы." required minlength="2" maxlength="200">
                     <span for="profile-description" class="description-input-error popup__input-error"></span>
                     </label>
-                    <button class="popup__save-button" type="submit">Сохранить</button>
+                    <button class="popup__save-button" id="editProfile-save-button" type="submit">Сохранить</button>
                 </form>
                 <button class="popup__close-button" id="editProfile-close-button" type="button"></button>
             </div>
@@ -75,7 +78,7 @@
                         value="" id="card-url-input" placeholder="Ссылка на картинку" type="url" required>
                         <span for="card-url" class="card-url-input-error popup__input-error"></span>
                     </label>
-                    <button class="popup__save-button"  type="submit" disabled>Создать</button>
+                    <button class="popup__save-button" id="addCard-save-button" type="submit" disabled>Создать</button>
                 </form>
                 <button class="popup__close-button" id="addCard-close-button" type="button"></button>
             </div>
@@ -90,13 +93,31 @@
             </div>
         </section>
 
+        <!--модальное окно - обновить аватар-->
+        <section class="popup popup_type_update-avatar">
+            <div class="popup__container">
+                <h2 class="popup__title">Обновить аватар</h2>
+                <form class="popup__form" id="avatarFormPopup" name="popup__updateAvatar-form" novalidate>
+                    <label for="update-avatar" class="popup__label">
+                        <input class="popup__input" name="update-avatar" value="" id="update-avatar-input" placeholder="Ссылка на изображение" type="url" required>
+                        <span for="update-avatar" class="update-avatar-input-error popup__input-error"></span>
+                    </label>
+                    <button class="popup__save-button" id="updateAvatar-save-button" type="submit" disabled>Сохранить</button>
+                </form>
+                <button class="popup__close-button" id="editProfile-close-button" type="button"></button>
+            </div>
+        </section>
+
         <!--шаблон карточки-->
         <template id="cardTemplate">
                 <li class="card">
                     <img class="card__image" src="" alt="Изображение">
                     <div class="card__info">
                         <h2 class="card__title"></h2>
+                        <div class="card__like-container">
                         <button class="card__like-button" type="button"></button>
+                        <p class="card__like-counter"></p>
+                    </div>
                     </div>
                     <button class="card__delete-button"></button>
                 </li>
