--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
 
         <!--шаблон карточки-->
         <template id="cardTemplate">
-                <li class="card">
+                <li class="card" data-id="">
                     <img class="card__image" src="" alt="Изображение">
                     <div class="card__info">
                         <h2 class="card__title"></h2>
