--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
         <section class="popup popup_type_image-preview">
             <div class="popup__image-container">
                 <button class="popup__close-button" id="imagePreview-close-button" type="button"></button>
-                    <img class="popup__image" src="" alt="">
+                    <img class="popup__image" src="_" alt="">
                     <h2 class="popup__image-name"></h2>
             </div>
         </section>
@@ -104,14 +104,14 @@
                     </label>
                     <button class="popup__save-button" id="updateAvatar-save-button" type="submit" disabled>Сохранить</button>
                 </form>
-                <button class="popup__close-button" id="editProfile-close-button" type="button"></button>
+                <button class="popup__close-button" id="editAvatar-close-button" type="button"></button>
             </div>
         </section>
 
         <!--шаблон карточки-->
         <template id="cardTemplate">
                 <li class="card" data-id="">
-                    <img class="card__image" src="" alt="Изображение">
+                    <img class="card__image" src="_" alt="Изображение">
                     <div class="card__info">
                         <h2 class="card__title"></h2>
                         <div class="card__like-container">
