--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
         <section class="popup popup_type_image-preview">
             <div class="popup__image-container">
                 <button class="popup__close-button" id="imagePreview-close-button" type="button"></button>
-                    <img class="popup__image" src="_" alt="">
+                    <img class="popup__image" src="" alt="">
                     <h2 class="popup__image-name"></h2>
             </div>
         </section>
@@ -111,7 +111,7 @@
         <!--шаблон карточки-->
         <template id="cardTemplate">
                 <li class="card" data-id="">
-                    <img class="card__image" src="_" alt="Изображение">
+                    <img class="card__image" src="" alt="Изображение">
                     <div class="card__info">
                         <h2 class="card__title"></h2>
                         <div class="card__like-container">
